[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/UI/Game/SpellIcons/firebal_smalll.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/KillLogItem.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/UI/Game/SpellIcons/deathIcon.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="KillLogItem" type="HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 311.0
margin_bottom = 14.0
custom_constants/separation = 10
alignment = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillerName" type="Label" parent="."]
margin_left = 210.0
margin_right = 242.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0.419608, 0.419608, 0.419608, 0.392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "killer"
align = 2

[node name="SpellIcon" type="Control" parent="."]
margin_left = 252.0
margin_right = 266.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )

[node name="Death" type="Sprite" parent="SpellIcon"]
position = Vector2( 6.48364, 8.27223 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="SpellIcon"]
position = Vector2( 6.48364, 8.27223 )
texture = ExtResource( 1 )

[node name="KilledName" type="Label" parent="."]
margin_left = 276.0
margin_right = 311.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.968627, 0.407843, 0.407843, 1 )
custom_colors/font_color_shadow = Color( 0.333333, 0.333333, 0.333333, 0.392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "killed"
align = 2

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 1 )

[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
